# haskell-kurs-audio-demo

./: HKAudio1.cabal  LICENSE  LICENSE.orig  README.md  stack.yaml  to-soundcard-8000.sh  to-soundcard.sh
src/: Janik.hs  Jannick.hs  Main.hs  Music.hs  Playback.hs  Synth.hs  xxx.hs
