name:                HKAudio1
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/HKAudio1#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable HKAudio1
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Playback
                     , Synth
                     , Music
                     , Jannick
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , random
                     , process
  ghc-options:       -Wall -fno-warn-unused-imports -O -rtsopts -threaded -eventlog
  extensions:        FlexibleContexts
